z-index fix for ticket page

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav {
   align-items: center;
   padding: 20px 25px;
   transition: all 0.5s ease;
+  z-index: 2;
 }
 
 .logo-box {
@@ -166,6 +167,7 @@ section h1 {
 
 .form-wrapper {
   padding: 40px 10px;
+  z-index: 1;
 }
 
 .form-wrapper a {
